screens/Contact/Hero/hero.module.css
.content {
    display: grid;
    grid-template-columns: 1fr 1px 1fr;
    align-items: center;
    gap: 64px;
}

.description {
    color: var(--gray-950);
}

.divider {
    background-color: var(--gray-200);
    width: 1px;
    height: 100%;
}

.title_wrapper,
.details_wrapper {
    display: grid;
    gap: 16px;
}

.details_wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 48px;
}

.details_title {
    font-weight: 500;
    margin-bottom: 16px;
}

.details_text {
    color: var(--gray-500);
}

.image_wrapper {
    margin-top: 64px;
    position: relative;
    width: 100%;
    height: 500px;
    border-radius: 12px;
    overflow: hidden;
}

.form_title,
.contact_form {
    margin-top: 64px;
}

@media (max-width: 768px) {
    .content {
        grid-template-columns: 1fr;
        gap: 48px;
    }

    .divider {
        width: 100%;
        height: 1px;
    }

    .title,
    .form_title {
        font-size: 40px;
        line-height: 52px;
        letter-spacing: -0.54px;
    }

    .image_wrapper {
        margin-top: 48px;
        height: 400px;
    }
}

@media (max-width: 480px) {
    .details_wrapper {
        grid-template-columns: 1fr;
    }

    .image_wrapper {
        height: 300px;
    }
}

